# api-doc-gen

./: .gitignore  LICENSE  Makefile  README.md  cli.py  gen_docs.py  gen_flows.py  gen_manifest.py  gen_mcp.py  gen_skill.py  pyproject.toml  requirements.txt  setup.py
examples/: config.yaml
pipeline/: __init__.py  graph.py  nodes.py  review.py  state.py
templates/: api_doc_template.py  flow_template.py
templates/defaults/: VARIABLES.md  api.md.j2  cron.md.j2  flow.md.j2  mq.md.j2
