[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-doc-gen"
version = "0.1.0"
description = "从 Swagger/OpenAPI + 源码自动生成 AI 知识库友好的 API 文档"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ckall", email = ""},
]
keywords = ["swagger", "openapi", "documentation", "ai", "rag", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyyaml>=6.0",
    "langgraph>=0.4",
    "langchain-openai>=0.3.18",
    "langchain-core>=0.3.61",
    "rich>=14.0",
]

[project.urls]
Homepage = "https://github.com/ckall/api-doc-gen"
Repository = "https://github.com/ckall/api-doc-gen"
Issues = "https://github.com/ckall/api-doc-gen/issues"

[project.scripts]
api-doc-gen = "cli:main"

[tool.setuptools]
py-modules = ["cli", "gen_manifest", "gen_docs"]

[tool.setuptools.packages.find]
include = ["pipeline*", "templates*"]
